# wsfuzz

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: release.yml  tests.yml
seeds/: boundaries.txt  cswsh.txt  injection.txt  json.txt  json_nested.txt  json_rpc.txt  protocol.txt  websocket.txt
tests/: conftest.py  echo_server.py  test_boundary.py  test_cli.py  test_connection_states.py  test_fuzzer.py  test_harness.py  test_harness_unit.py  test_logger.py  test_mutator.py  test_protocol.py  test_raw_unit.py  test_scenario.py  test_scenario_unit.py  test_security.py  test_smoke.py  test_transport.py  vulnerable_server.py
wsfuzz/: __main__.py  cli.py  fuzzer.py  harness.py  logger.py  mutator.py  raw.py  scenario.py  transport.py
