[project]
name = "wsfuzz"
version = "0.4.2"
description = "WebSocket fuzzer using Radamsa for input mutation"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0",
]

[project.scripts]
wsfuzz = "wsfuzz.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.0",
    "ruff>=0.15",
    "ty>=0.0.23",
]

[tool.pytest.ini_options]
addopts = "-n auto"
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
